fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -130,7 +130,7 @@ body {
 
   /* contact section */
   .contact-container {
-    @apply max-w-2xl w-full relative z-10 sm:px-10 px-5 mt-12;
+    @apply max-w-2xl w-full relative z-10 sm:p-10 p-5 mt-12;
   }
 
   .field-label {
